--- a/src/index.html
+++ b/src/index.html
@@ -795,8 +795,6 @@
       <small>Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
     </div>
   </footer>
-  <div class="page-top-button js-page-top">
-    <a href="#"><img src="./assets/images/common/page-top-button.svg" alt="トップへ戻る"></a>
-</div>
+  <div class="page-top-button js-page-top"></div>
 </body>
 </html>
