--- a/src/index.html
+++ b/src/index.html
@@ -795,6 +795,6 @@
       <small>Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
     </div>
   </footer>
-  <div class="page-top-button js-page-top"></div>
+  <a class="page-top-button js-page-top"></a>
 </body>
 </html>
