--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
 
     <!-- Campaign -->
     <section class="top-campaign campaign">
-      <div class="campaign__inner inner">
+      <div class="inner">
         <div class="campaign__section-header section-header">
           <p class="section-header__title">Campaign</p>
           <h2 class="section-header__subtitle">キャンペーン</h2>
@@ -269,7 +269,7 @@
         <div class="swiper js-campaign-swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide slide-2">
-              <a href="#" class="campaign-card">
+              <div href="#" class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_1.jpg" alt="色鮮やかな魚の群れ">
                 </figure>
@@ -286,10 +286,10 @@
                     </div>
                   </div>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="swiper-slide slide-2">
-              <a href="#" class="campaign-card">
+              <div href="#" class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_2.jpg" alt="エメラルドグリーンの海と船">
                 </figure>
@@ -306,10 +306,10 @@
                     </div>
                   </div>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="swiper-slide slide-2">
-              <a href="#" class="campaign-card">
+              <div href="#" class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_3.jpg" alt="クラゲの群れ">
                 </figure>
@@ -326,10 +326,10 @@
                     </div>
                   </div>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="swiper-slide slide-2">
-              <a href="#" class="campaign-card">
+              <div href="#" class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_4.jpg" alt="ダイビング">
                 </figure>
@@ -346,7 +346,7 @@
                     </div>
                   </div>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
          </div>
@@ -363,7 +363,7 @@
 
     <!--About us-->
     <section class="top-about about">
-      <div class="about__inner inner">
+      <div class="inner">
         <div class="about__section-header section-header">
           <p class="section-header__title">About&nbsp;us</p>
           <h2 class="section-header__subtitle">私たちについて</h2>
@@ -391,18 +391,13 @@
                   </div>
                </div>
               </div>
-               <img src="./assets/images/common/sango.png" alt="サンゴの挿絵" class="about__image3 u-desktop">
-        </div>
-
-
-
+          </div>
       </div>
-      
     </section>
 
      <!--information-->
 <section class="top-information information">
-  <div class="information__inner">
+  <div class="inner">
       <div class="information__section-header section-header">
           <p class="section-header__title">Information</p>
           <h2 class="section-header__subtitle">ダイビング情報</h2>
@@ -425,15 +420,11 @@
 
     <!--Blog-->
     <section class="top-blog blog">
-      <div class="blog__inner inner">
+      <div class="inner">
         <div class="blog__section-header section-header">
           <p class="section-header__title section-header__title--white">Blog</p>
           <h2 class="section-header__subtitle section-header__subtitle--white">ブログ</h2>
         </div>
-        <div class="blog__img">
-          <img src="./assets/images/common/fish.png" alt="魚の群れの挿絵" class="u-desktop">
-        </div>
-        <div class="blog__container">
         <div class="blog__contents">
           <a href="#" class="blog-card">
             <figure class="blog-card__img">
@@ -472,22 +463,15 @@
         <div class="blog__btn">
           <a href="#" class="button slide"><span>View&nbsp;more</span></a>
         </div>
-      </div>
     </div>
     </section>
 
    <!--Voice-->
    <section class="top-voice voice">
-    <div class="voice__inner">
+    <div class="inner">
       <div class="voice__section-header section-header">
         <p class="section-header__title">Voice</p>
         <h2 class="section-header__subtitle">お客様の声</h2>
-      </div>
-      <div class="voice__img-fish">
-        <img src="./assets/images/common/fish_2.png" alt="魚の群れの挿絵" class="u-desktop">
-      </div>
-      <div class="voice__img-tatunootoshigo">
-        <img src="./assets/images/common/tatunootoshigo.png" alt="タツノオトシゴの挿絵" class="u-desktop">
       </div>
       <div class="voice__contents">
         <a href="#" class="voice-card">
@@ -545,13 +529,10 @@
 
    <!--Price-->
    <section class="top-price price">
-    <div class="price__inner">
+    <div class="inner">
       <div class="price__section-header section-header">
         <p class="section-header__title">Price</p>
         <h2 class="section-header__subtitle">料金一覧</h2>
-      </div>
-      <div class="price__img-fish">
-        <img src="./assets/images/common/fish_3.png" alt="魚の群れの挿絵" class="u-desktop">
       </div>
       <div class="price__contents">
         <div class="price__content">
@@ -635,10 +616,10 @@
 
    <!-- Contact -->
     <section class="top-contact-info contact-info">
-      <div class="contact-info__inner">
-        <div class="contact-info__img-fish">
+      <div class="inner">
+        <!-- <div class="contact-info__img-fish">
           <img src="./assets/images/common/fish_3.png" alt="魚の群れの挿絵">
-        </div>
+        </div> -->
         <div class="contact-info__contents">
           <div class="access">
             <div class="access__inner">
@@ -676,7 +657,8 @@
   </main>
 
   <footer class="top-footer footer">
-    <div class="footer__inner">
+    <div class="inner">
+    <div class="footer__wrapper">
       <div class="footer__container">
         <a href="#" class="footer__logo-link">
           <img src="./assets/images/common/footer-logo.svg" alt="CodeUps">
@@ -805,6 +787,7 @@
         </div>
       </nav>
     </div>
+   </div>
     <div class="footer__copyright">
       <small>Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
     </div>
