--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
 
     <!-- Campaign -->
     <section class="top-campaign campaign">
-      <div class="inner">
+      <div class="camping__inner inner">
         <div class="campaign__section-header section-header">
           <p class="section-header__title">Campaign</p>
           <h2 class="section-header__subtitle">キャンペーン</h2>
@@ -617,9 +617,6 @@
    <!-- Contact -->
     <section class="top-contact-info contact-info">
       <div class="inner">
-        <!-- <div class="contact-info__img-fish">
-          <img src="./assets/images/common/fish_3.png" alt="魚の群れの挿絵">
-        </div> -->
         <div class="contact-info__contents">
           <div class="access">
             <div class="access__inner">
