--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
       </nav>
       <nav class="header__sp-nav sp-nav js-sp-nav is-activ">
         <div class="sp-nav__inner">
+          <div class="sp-nav__contents">
           <div class="sp-nav__container">
             <div class="sp-nav__flex">
               <div class="sp-nav__group">
@@ -214,6 +215,7 @@
               </div>
           </div>
           </div>
+        </div>
         </div>
       </nav>
   </div>
@@ -670,6 +672,7 @@
         </div>
       </div>
       <nav class="top-footer-nav footer-nav">
+        <div class="footer-nav__contents">
         <div class="footer-nav__container">
           <div class="footer-nav__flex">
             <div class="footer-nav__group">
@@ -782,6 +785,7 @@
             </div>
          </div>
         </div>
+      </div>
       </nav>
     </div>
    </div>
