--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
       </nav>
       <nav class="header__sp-nav sp-nav js-sp-nav is-activ">
         <div class="sp-nav__inner">
+          <div class="sp-nav__wrap">
           <div class="sp-nav__contents">
           <div class="sp-nav__container">
             <div class="sp-nav__flex">
@@ -216,6 +217,7 @@
           </div>
           </div>
         </div>
+      </div>
         </div>
       </nav>
   </div>
