--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 
   <!-- JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="./assets/js/jquery.inview.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script defer src="./assets/js/jquery.inview.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
@@ -222,12 +222,12 @@
       </nav>
   </div>
   </header>
-
+  
   <main>
 <!-- メインビュー -->
     <div class="mv" id="js-mv">
       <div class="mv__inner">
-        <div class="swiper mySwiper">
+        <div class="swiper js-mv-swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <picture>
