--- a/src/index.html
+++ b/src/index.html
@@ -265,15 +265,17 @@
     <!-- Campaign -->
     <section class="top-campaign campaign">
       <div class="camping__inner inner">
-        <div class="campaign__section-header section-header">
-          <p class="section-header__title">Campaign</p>
-          <h2 class="section-header__subtitle">キャンペーン</h2>
+        <div class="campaign__section-header">
+          <div class="section-header">
+            <p class="section-header__title">Campaign</p>
+            <h2 class="section-header__subtitle">キャンペーン</h2>
+          </div>
         </div>
         <div class="campaign__container">
         <div class="swiper js-campaign-swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide campaign__slide">
-              <div href="#" class="campaign-card">
+              <div class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_1.jpg" alt="色鮮やかな魚の群れ">
                 </figure>
@@ -293,7 +295,7 @@
               </div>
             </div>
             <div class="swiper-slide campaign__slide">
-              <div href="#" class="campaign-card">
+              <div class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_2.jpg" alt="エメラルドグリーンの海と船">
                 </figure>
@@ -313,7 +315,7 @@
               </div>
             </div>
             <div class="swiper-slide campaign__slide">
-              <div href="#" class="campaign-card">
+              <div class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_3.jpg" alt="クラゲの群れ">
                 </figure>
@@ -333,7 +335,7 @@
               </div>
             </div>
             <div class="swiper-slide campaign__slide">
-              <div href="#" class="campaign-card">
+              <div class="campaign-card">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign_img_4.jpg" alt="ダイビング">
                 </figure>
@@ -368,9 +370,11 @@
     <!--About us-->
     <section class="top-about about">
       <div class="inner">
-        <div class="about__section-header section-header">
-          <p class="section-header__title">About&nbsp;us</p>
-          <h2 class="section-header__subtitle">私たちについて</h2>
+        <div class="about__section-header">
+          <div class="section-header">
+            <p class="section-header__title">About&nbsp;us</p>
+            <h2 class="section-header__subtitle">私たちについて</h2>
+          </div>
         </div>
         <div class="about__body">
               <div class="about__image-container">
@@ -402,9 +406,11 @@
      <!--information-->
 <section class="top-information information">
   <div class="inner">
-      <div class="information__section-header section-header">
+      <div class="information__section-header">
+        <div class="section-header">
           <p class="section-header__title">Information</p>
           <h2 class="section-header__subtitle">ダイビング情報</h2>
+        </div>
       </div>
         <div class="information__contents">
           <div class="information__image colorbox">
@@ -425,9 +431,11 @@
     <!--Blog-->
     <section class="top-blog blog">
       <div class="inner">
-        <div class="blog__section-header section-header">
-          <p class="section-header__title section-header__title--white">Blog</p>
-          <h2 class="section-header__subtitle section-header__subtitle--white">ブログ</h2>
+        <div class="blog__section-header">
+          <div class="section-header">
+            <p class="section-header__title section-header__title--white">Blog</p>
+            <h2 class="section-header__subtitle section-header__subtitle--white">ブログ</h2>
+          </div>
         </div>
         <div class="blog__contents blog-cards">
           <a href="#" class="blog-cards__item blog-card">
@@ -473,9 +481,11 @@
    <!--Voice-->
    <section class="top-voice voice">
     <div class="inner">
-      <div class="voice__section-header section-header">
-        <p class="section-header__title">Voice</p>
-        <h2 class="section-header__subtitle">お客様の声</h2>
+      <div class="voice__section-header">
+        <div class="section-header">
+          <p class="section-header__title">Voice</p>
+          <h2 class="section-header__subtitle">お客様の声</h2>
+        </div>
       </div>
       <div class="voice__contents voice-cards">
         <a href="#" class="voice-cards__item voice-card">
@@ -534,9 +544,11 @@
    <!--Price-->
    <section class="top-price price">
     <div class="inner">
-      <div class="price__section-header section-header">
+      <div class="price__section-header">
+        <div class="section-header">
         <p class="section-header__title">Price</p>
         <h2 class="section-header__subtitle">料金一覧</h2>
+        </div>
       </div>
       <div class="price__contents">
         <div class="price__content">
@@ -671,121 +683,123 @@
           </a>
         </div>
       </div>
-      <nav class="footer__nav-layout footer-nav">
-        <div class="footer-nav__contents">
-        <div class="footer-nav__container">
-          <div class="footer-nav__flex">
-            <div class="footer-nav__group">
-            <dl class="footer-nav__wrapper">
-              <dt class="footer-nav__title">
-                <a href="#">キャンペーン</a>
-              </dt>
-              <dd class="footer-nav__body">
-                <ul class="footer-nav__lists">
-                  <li class="footer-nav__list">
-                    <a href="#">ライセンス取得</a>
-                  </li>
-                  <li class="footer-nav__list">
-                    <a href="#">貸切体験ダイビング</a>
-                  </li>
-                  <li class="footer-nav__list">
-                    <a href="#">ナイトダイビング</a>
-                  </li>
-                </ul>
-              </dd>
-            </dl>
-            <dl class="footer-nav__wrapper">
-              <dt class="footer-nav__title">
-                <a href="#">私たちについて</a>
-              </dt>
-              <dd></dd>
-            </dl>
-            </div>
-            <div class="footer-nav__group">
+      <nav class="footer__nav">
+        <div class="footer-nav">
+          <div class="footer-nav__contents">
+          <div class="footer-nav__container">
+            <div class="footer-nav__flex">
+              <div class="footer-nav__group">
               <dl class="footer-nav__wrapper">
                 <dt class="footer-nav__title">
-                  <a href="#">ダイビング情報</a>
+                  <a href="#">キャンペーン</a>
                 </dt>
                 <dd class="footer-nav__body">
                   <ul class="footer-nav__lists">
                     <li class="footer-nav__list">
-                      <a href="#">ライセンス講習</a>
+                      <a href="#">ライセンス取得</a>
                     </li>
                     <li class="footer-nav__list">
-                      <a href="#">体験ダイビング</a>
+                      <a href="#">貸切体験ダイビング</a>
                     </li>
                     <li class="footer-nav__list">
-                      <a href="#">ファンダイビング</a>
+                      <a href="#">ナイトダイビング</a>
                     </li>
                   </ul>
                 </dd>
               </dl>
               <dl class="footer-nav__wrapper">
                 <dt class="footer-nav__title">
-                  <a href="#">ブログ</a>
+                  <a href="#">私たちについて</a>
                 </dt>
                 <dd></dd>
               </dl>
+              </div>
+              <div class="footer-nav__group">
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">ダイビング情報</a>
+                  </dt>
+                  <dd class="footer-nav__body">
+                    <ul class="footer-nav__lists">
+                      <li class="footer-nav__list">
+                        <a href="#">ライセンス講習</a>
+                      </li>
+                      <li class="footer-nav__list">
+                        <a href="#">体験ダイビング</a>
+                      </li>
+                      <li class="footer-nav__list">
+                        <a href="#">ファンダイビング</a>
+                      </li>
+                    </ul>
+                  </dd>
+                </dl>
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">ブログ</a>
+                  </dt>
+                  <dd></dd>
+                </dl>
+              </div>
             </div>
           </div>
+          <div class="footer-nav__container">
+            <div class="footer-nav__flex">
+              <div class="footer-nav__group">
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">お客様の声</a>
+                  </dt>
+                  <dd></dd>
+                </dl>
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">料金一覧</a>
+                  </dt>
+                  <dd class="footer-nav__body">
+                    <ul class="footer-nav__lists">
+                      <li class="footer-nav__list">
+                        <a href="#">ライセンス講習</a>
+                      </li>
+                      <li class="footer-nav__list">
+                        <a href="#">体験ダイビング</a>
+                      </li>
+                      <li class="footer-nav__list">
+                        <a href="#">ファンダイビング</a>
+                      </li>
+                    </ul>
+                  </dd>
+                </dl>
+              </div>
+              <div class="footer-nav__group">
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">よくある質問</a>
+                  </dt>
+                  <dd></dd>
+                </dl>
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                  </dt>
+                  <dd></dd>
+                </dl>
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">利用規約</a>
+                  </dt>
+                  <dd></dd>
+                </dl>
+                <dl class="footer-nav__wrapper">
+                  <dt class="footer-nav__title">
+                    <a href="#">お問い合わせ</a>
+                  </dt>
+                  <dd></dd>
+                </dl>
+              </div>
+          </div>
+          </div>
+          </div>
         </div>
-        <div class="footer-nav__container">
-          <div class="footer-nav__flex">
-            <div class="footer-nav__group">
-              <dl class="footer-nav__wrapper">
-                <dt class="footer-nav__title">
-                  <a href="#">お客様の声</a>
-                </dt>
-                <dd></dd>
-              </dl>
-              <dl class="footer-nav__wrapper">
-                <dt class="footer-nav__title">
-                  <a href="#">料金一覧</a>
-                </dt>
-                <dd class="footer-nav__body">
-                  <ul class="footer-nav__lists">
-                    <li class="footer-nav__list">
-                      <a href="#">ライセンス講習</a>
-                    </li>
-                    <li class="footer-nav__list">
-                      <a href="#">体験ダイビング</a>
-                    </li>
-                    <li class="footer-nav__list">
-                      <a href="#">ファンダイビング</a>
-                    </li>
-                  </ul>
-                </dd>
-              </dl>
-            </div>
-            <div class="footer-nav__group">
-              <dl class="footer-nav__wrapper">
-                <dt class="footer-nav__title">
-                  <a href="#">よくある質問</a>
-                </dt>
-                <dd></dd>
-              </dl>
-              <dl class="footer-nav__wrapper">
-                <dt class="footer-nav__title">
-                  <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
-                </dt>
-                <dd></dd>
-              </dl>
-              <dl class="footer-nav__wrapper">
-                <dt class="footer-nav__title">
-                  <a href="#">利用規約</a>
-                </dt>
-                <dd></dd>
-              </dl>
-              <dl class="footer-nav__wrapper">
-                <dt class="footer-nav__title">
-                  <a href="#">お問い合わせ</a>
-                </dt>
-                <dd></dd>
-              </dl>
-            </div>
-         </div>
-        </div>
-      </div>
       </nav>
     </div>
    </div>
