--- a/src/index.html
+++ b/src/index.html
@@ -488,7 +488,7 @@
         </div>
       </div>
       <div class="voice__contents voice-cards">
-        <a href="#" class="voice-cards__item voice-card">
+        <div class="voice-cards__item voice-card">
           <div class="voice-card__body">
             <div class="voice-card__container">
               <div class="voice-card__wrap">
@@ -510,8 +510,8 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
               ここにテキストが入ります。ここにテキストが入ります。</p>
           </div>
-        </a>
-        <a href="#" class="voice-cards__item voice-card">
+        </div>
+        <div class="voice-cards__item voice-card">
           <div class="voice-card__body">
             <div class="voice-card__container">
               <div class="voice-card__wrap">
@@ -533,7 +533,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
               ここにテキストが入ります。ここにテキストが入ります。</p>
           </div>
-        </a>
+        </div>
       </div>
       <div class="voice__btn">
         <a href="#" class="button slide"><span>View&nbsp;more</span></a>
