--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <div class="header__inner">
       <h1 class="header__title">
         <a href="#" class="header__logo-link">
-          <img src="./assets/images/common/logo.svg" decoding="async" alt="CodeUpsのロゴ">
+          <img src="./assets/images/common/logo.svg" decoding="async" alt="CodeUpsのロゴ" width="141" height="58">
         </a>
       </h1>
         <button class="header__drawer hamburger js-hamburger">
