--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <div class="header__inner">
       <h1 class="header__title">
         <a href="#" class="header__logo-link">
-          <img src="./assets/images/common/logo.svg" decoding="async" alt="CodeUpsのロゴ" width="141" height="58">
+          <img src="./assets/images/common/logo.png" decoding="async" alt="CodeUpsのロゴ">
         </a>
       </h1>
         <button class="header__drawer hamburger js-hamburger">
@@ -362,7 +362,7 @@
 
     <!--About us-->
     <section class="top-about about">
-      <div class="inner">
+      <div class="about__inner inner">
         <div class="about__section-header">
           <div class="section-header">
             <p class="section-header__title">About&nbsp;us</p>
@@ -398,7 +398,7 @@
 
      <!--information-->
 <section class="top-information information">
-  <div class="inner">
+  <div class="information__inner inner">
       <div class="information__section-header">
         <div class="section-header">
           <p class="section-header__title">Information</p>
@@ -423,7 +423,7 @@
 
     <!--Blog-->
     <section class="top-blog blog">
-      <div class="inner">
+      <div class="blog__inner inner">
         <div class="blog__section-header">
           <div class="section-header">
             <p class="section-header__title section-header__title--white">Blog</p>
@@ -475,7 +475,7 @@
 
    <!--Voice-->
    <section class="top-voice voice">
-    <div class="inner">
+    <div class="voice__inner inner">
       <div class="voice__section-header">
         <div class="section-header">
           <p class="section-header__title">Voice</p>
@@ -540,7 +540,7 @@
 
    <!--Price-->
    <section class="top-price price">
-    <div class="inner">
+    <div class="price__inner inner">
       <div class="price__section-header">
         <div class="section-header">
         <p class="section-header__title">Price</p>
@@ -629,7 +629,7 @@
 
    <!-- Contact -->
     <section class="top-contact contact">
-      <div class="inner">
+      <div class="contact__inner inner">
         <div class="contact__contents">
           <div class="contact__info">
             <div class="contact__info-inner">
@@ -663,9 +663,9 @@
       </div>
     </section>
   </main>
-
+<!--フッター-->
   <footer class="top-footer footer">
-    <div class="inner">
+    <div class="fooer__inner inner">
     <div class="footer__wrapper">
       <div class="footer__container">
         <a href="#" class="footer__logo-link">
