--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <header class="top-header header" id="js-header">
     <div class="header__inner">
       <h1 class="header__title">
-        <a href="#" class="header__logo-link">
+        <a href="index.html" class="header__logo-link">
           <img src="./assets/images/common/logo.png" decoding="async" alt="CodeUpsのロゴ" width="133" height="50">
         </a>
       </h1>
@@ -54,7 +54,7 @@
       <nav class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-campaign.html" class="pc-nav__link">
               Campaign
               <p class="pc-nav__subtitle">キャンペーン</p>
             </a>
@@ -112,7 +112,7 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">キャンペーン</a>
+                        <a href="page-campaign.html">キャンペーン</a>
                       </li>
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
