--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-about.html" class="pc-nav__link">
               About us
               <p class="pc-nav__subtitle">私たちについて</p>
             </a>
@@ -130,7 +130,7 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">私たちについて</a>
+                        <a href="page-about.html">私たちについて</a>
                       </li>
                     </ul>
                   </div>
@@ -227,34 +227,29 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/common/mv_img_1.jpg" media="(min-width: 768px)" width="750"
-                  height="1334">
-                <img src="./assets/images/common/mv_img_1-sp.jpg" alt="ウミガメが泳いでいる様子" decoding="async" width="2880"
-                  height="1536">
+                <source srcset="./assets/images/common/mv_img_1.jpg" media="(min-width: 768px)" width="2880" height="1536">
+                <img src="./assets/images/common/mv_img_1-sp.jpg" alt="ウミガメが泳いでいる様子" decoding="async" width="750" height="1334">
               </picture>
             </div>
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/common/mv_img_2.jpg" media="(min-width: 768px)" width="750"
-                  height="1334">
-                <img src="./assets/images/common/mv_img_2-sp.jpg" alt="ウミガメの近くを泳ぐ２人のダイバー" decoding="async" width="2880"
+                <source srcset="./assets/images/common/mv_img_2.jpg" media="(min-width: 768px)" width="2880"
                   height="1536">
+                <img src="./assets/images/common/mv_img_2-sp.jpg" alt="ウミガメの近くを泳ぐ２人のダイバー" decoding="async" width="750" height="1334">
               </picture>
             </div>
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/common/mv_img_3.jpg" media="(min-width: 768px)" width="750"
-                  height="1334">
-                <img src="./assets/images/common/mv_img_3-sp.jpg" alt="太陽が照り付ける海と船" decoding="async" width="2880"
+                <source srcset="./assets/images/common/mv_img_3.jpg" media="(min-width: 768px)" width="2880"
                   height="1536">
+                <img src="./assets/images/common/mv_img_3-sp.jpg" alt="太陽が照り付ける海と船" decoding="async" width="750" height="1334">
               </picture>
             </div>
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/common/mv_img_4.jpg" media="(min-width: 768px)" width="750"
-                  height="1334">
-                <img src="./assets/images/common/mv_img_4-sp.jpg" alt="綺麗な海と浜辺" decoding="async" width="2880"
+                <source srcset="./assets/images/common/mv_img_4.jpg" media="(min-width: 768px)" width="2880"
                   height="1536">
+                <img src="./assets/images/common/mv_img_4-sp.jpg" alt="綺麗な海と浜辺" decoding="async" width="750" height="1334">
               </picture>
             </div>
           </div>
@@ -293,7 +288,7 @@
                       <div class="campaign-card__text">全部コミコミ(お一人様)</div>
                       <div class="campaign-card__price">
                         <p class="campaign-card__first-price">¥56,000</p>
-                        <p class="campaign-card__second-price">¥46,000</p>
+                        <p class="campaign-card__second-price campaign-card__second-price--layout">¥46,000</p>
                       </div>
                     </div>
                   </div>
@@ -314,7 +309,7 @@
                       <div class="campaign-card__text">全部コミコミ(お一人様)</div>
                       <div class="campaign-card__price">
                         <p class="campaign-card__first-price">¥24,000</p>
-                        <p class="campaign-card__second-price">¥18,000</p>
+                        <p class="campaign-card__second-price campaign-card__second-price--layout">¥18,000</p>
                       </div>
                     </div>
                   </div>
@@ -335,7 +330,7 @@
                       <div class="campaign-card__text">全部コミコミ(お一人様)</div>
                       <div class="campaign-card__price">
                         <p class="campaign-card__first-price">¥10,000</p>
-                        <p class="campaign-card__second-price">¥8,000</p>
+                        <p class="campaign-card__second-price campaign-card__second-price--layout">¥8,000</p>
                       </div>
                     </div>
                   </div>
@@ -356,7 +351,7 @@
                       <div class="campaign-card__text">全部コミコミ(お一人様)</div>
                       <div class="campaign-card__price">
                         <p class="campaign-card__first-price">¥20,000</p>
-                        <p class="campaign-card__second-price">¥16,000</p>
+                        <p class="campaign-card__second-price campaign-card__second-price--layout">¥16,000</p>
                       </div>
                     </div>
                   </div>
@@ -387,16 +382,15 @@
         <div class="about__body">
           <div class="about__image-container">
             <picture>
-              <source srcset="./assets/images/common/about_img_2.jpg" media="(min-width: 768px)">
+              <source srcset="./assets/images/common/about_img_2.jpg" media="(min-width: 768px)" width="1760" height="1162">
               <img src="./assets/images/common/about_img_2-sp.jpg" alt="黄色い二匹の魚が泳いでいる様子" decoding="async" loading="lazy"
-                width="1760" height="1162">
+                >
             </picture>
           </div>
           <div class="about__image-container-sub">
             <picture>
-              <source srcset="./assets/images/common/about_img_1-sp.jpg" media="(min-width: 768px)">
-              <img src="./assets/images/common/about_img_1.jpg" alt="瓦屋根の上のシーサー" decoding="async" loading="lazy"
-                width="1212" height="800">
+              <source srcset="./assets/images/common/about_img_1-sp.jpg" media="(min-width: 768px)" width="1212" height="800">
+              <img src="./assets/images/common/about_img_1.jpg" alt="瓦屋根の上のシーサー" decoding="async" loading="lazy" width="194" height="388">
             </picture>
           </div>
           <div class="about__text-group">
