--- a/src/page-about.html
+++ b/src/page-about.html
@@ -242,7 +242,7 @@
   <!-- 下層About us -->
    <div class="layout-about page-about">
     <div class="page-about__inner inner">
-      <div class="about__body">
+      <div class="about__body about__body--offset">
         <div class="about__image-container about__image-container--layout">
           <picture>
             <source srcset="./assets/images/common/about_img_2.jpg" media="(min-width: 768px)" width="1760" height="1162">
@@ -263,12 +263,39 @@
           </div>
         </div>
       </div>
-      <div class="page-about__section-header">
+   <!-- Gallery -->
+      <div class="layout-gallery gallery">
         <div class="section-header">
           <p class="section-header__title"> Gallery</p>
           <h2 class="section-header__subtitle">フォト</h2>
         </div>
+        <div class="gallery__contents">
+            <div class="gallery__image-1">
+              <img src="./assets/images/common/gallery1.jpg" alt="赤い小さな魚の群れが岩場を泳いでいる様子" decoding="async" loading="lazy"
+              width="1492" height="984">
+            </div>
+            <div class="gallery__image-2">
+              <img src="./assets/images/common/gallery2.jpg" alt="綺麗な海に浮かぶ船" decoding="async" loading="lazy"
+              width="1160" height="738">
+            </div>
+            <div class="gallery__image-3">
+              <img src="./assets/images/common/gallery3.jpg" alt="縞模様の熱帯魚が２匹泳いでいる" decoding="async" loading="lazy"
+              width="1160" height="738">
+            </div>
+            <div class="gallery__image-4">
+              <img src="./assets/images/common/gallery4.jpg" alt="黄色い熱帯魚が泳いでいる" decoding="async" loading="lazy"
+              width="1160" height="738">
+            </div>
+            <div class="gallery__image-5">
+              <img src="./assets/images/common/gallery5.jpg" alt="魚の群れがこちらに向かって泳いでいる" decoding="async" loading="lazy"
+              width="1160" height="738">
+            </div>
+            <div class="gallery__image-6">
+              <img src="./assets/images/common/gallery6.jpg" alt="黄色い熱帯魚が泳いでいる様子" decoding="async" loading="lazy"
+              width="1492" height="984">
+            </div>
     </div>
+  </div>
    </div>
     <!-- Contact -->
     <section class="campaign-contact contact">
